--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;user id=root;password=123456;database=Tutorial;"
+  }
+   
 }
