--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;user id=root;password=123456;database=Tutorial;"
+    "DefaultConnection": "server=localhost;user id=root;password=123456;database=Tutorial;TreatTinyAsBoolean=true"
   }
    
 }
